[project]
name = "debatrix"
version = "0.1.0"
description = "Debatrix: LLM-based Multi-dimensional Debate Judge with Iterative Chronological Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "nicegui>=2.21.1",
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.35.0",
]
